methods.basics.MethodsDogHouse.scala.error
Compilation error:
MethodsDogHouse:3: error: identifier expected but 'for' found.
  for (var compt : Int <-1 to 4) {
  ^