methods.basics.MethodsDogHouse.scala.code
def dogHouse():
	
	for (var compt : Int <-1 to 4) {
    avance()
    avance()
    gauche()
  }

dogHouse()

